--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
     </nav>
 
     <!--  navbar end  -->
+
+
+    <!--Hero sestion star-->
+    <saaction class="hero" id="home">
+      <main class="content">
+        <h1>Mari Nikmati Secangkir <span>kopi</span></h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.  </p>
+        <a href="#" class="cta">Beli Sekarang</a>
+      </main>
+    </saaction>
+
+    <!--Hero sestion end-->
+
+
     <!-- feather icons -->
     <script>
       feather.replace();
